--- a/MOD 2/Aula4/Codelab/templates/index.html
+++ b/MOD 2/Aula4/Codelab/templates/index.html
@@ -10,10 +10,10 @@
             <p><b>Nome:</b> {{nome}}</p>            
             <p><b>Idade:</b> {{idade}}</p>            
             {% if doidao %}
-            <img src="{{imgdoidao}}" width="200" height="200">
+            <img src="{{imgdoidao}}" alt="Einstein doidao" width="200" height="200"/>
             <p>Albert ta doido!</p>
             {% else %}
-            <img src="{{imgnormal}}" width="200" height="200">
+            <img src="{{imgnormal}}" alt="Einstein normal" width="200" height="200"/>
             <p>Albert ta normal!</p>
             {% endif %}
         </div>
