--- a/MOD 2/Aula4/Exemplo 1/templates/index.html
+++ b/MOD 2/Aula4/Exemplo 1/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Blueedtech</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="static/estilo.css">
+        <link rel="stylesheet" type="text/css" href="static/estilo.css"/>
     </head>
     <body>
         <div class="titulo">
@@ -15,11 +15,10 @@
             <div class="titulo-turma">
                 <h2>Módulo 2 - Web, Cloud e Database</h2>
             </div>
-
             <div class="conteudo-turma">
                 <div class="agenda conteudo-turma-item">
-                    <br />
-                    <b>Agenda de hoje</b><br />
+                    <br/>
+                    <b>Agenda de hoje</b><br/>
                     <ul>
                         <li>Introdução ao desenvolvimento web</li>
                         <li>Estrutura HTML</li>
@@ -27,8 +26,8 @@
                     </ul>
                 </div>
                 <div class="lista conteudo-turma-item">
-                    <br />
-                    <b>Lista de presença</b><br /><br />
+                    <br/>
+                    <b>Lista de presença</b><br/><br/>
                     <table>
                         <tr>
                             <th id="item">Aluno</th>
