--- a/MOD 2/Projeto Final-versaofinal/templates/header.html
+++ b/MOD 2/Projeto Final-versaofinal/templates/header.html
@@ -4,20 +4,19 @@
 
 <div class="header">
     <div class="bloco">
-        <img src="/static/logoburguer.png" width="200" alt="Blue Burguer" />
+        <a href="/"><img src="/static/logoburguer.png" width="160" alt="Blue Burguer" /></a>
     </div>
-
     <div class="bloco">
         <h1>BLUE BURGUERS</h1>
     </div>
-
     <div class="bloco">
-        <a href="/create" class="botao">ADICIONAR</a>
-        <a href="/read" class="botao">VISUALIZAR</a>
+        <h2>Bem vindo, a Blue Hambúrgueria.</h2>
+    </div>
+    <div class="bloco">
+        <a href="/create" class="botao">Adicionar</a>
+        <a href="/read" class="botao">Visualizar todos</a>
     </div>
 
 </div>
+</br>
 
-<footer>
-    © Blueedtech - Turma2B
-</footer>
