--- a/MOD 2/Projeto Final-versaofinal/templates/read_all.html
+++ b/MOD 2/Projeto Final-versaofinal/templates/read_all.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blue Burguers</title>
+    <title>Blue Burguers - Visualizar todos</title>
     <link rel="icon shortcut" href="https://image.flaticon.com/icons/png/512/4972/4972091.png">
     <link rel="stylesheet" href="/static/style.css"/>
 </head>
@@ -28,7 +28,7 @@
                 <td>{{ registro["nome"] }}</td>
                 <td>{{ registro["ingredientes"] }}</td>
                 <td>R${{ registro["preco"] }}</td>
-                <td><img src="{{ registro['imagem_url'] }}" alt="{{ registro['nome'] }}" width="80" height="120"></td>
+                <td><img src="{{ registro['imagem_url'] }}" alt="{{ registro['nome'] }}" width="100%" height="130"></td>
                 <td><a href="/read/{{ registro['id'] }}" class="botao">Visualizar</a></td>
                 <td><a href="/update/{{ registro['id'] }}" class="botao">Editar</a></td>
                 <td><a href="/delete/{{ registro['id'] }}" class="botao">Remover</a></td>
@@ -43,4 +43,9 @@
         
 
 </body>
+
+<br><footer>
+    © Blueedtech - Turma2B
+</footer>
+
 </html>
