--- a/MOD 2/Projeto Final-versaofinal/templates/update.html
+++ b/MOD 2/Projeto Final-versaofinal/templates/update.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon shortcut" href="https://image.flaticon.com/icons/png/512/4972/4972091.png">
     <link rel="stylesheet" href="/static/style.css">
-    <title>Blue Burguers - Update</title>
+    <title>Blue Burguers - Editar</title>
 </head>
 <body>
     {%include 'header.html'%}
@@ -13,7 +14,7 @@
     {% if not sucesso %}
 
     <div class="bloco">
-        <h2>Modificar um Produto</h2>
+        <h2>Modificar Produto - Insira as novas informações:</h2>
     </div>
 
     
