--- a/MOD 3/Aula7/SalaDeAula/Pages/Index.cshtml
+++ b/MOD 3/Aula7/SalaDeAula/Pages/Index.cshtml
@@ -9,6 +9,6 @@
     <a class="btn btn-dark" asp-page="/Index">Gerar novo número</a>
     @if (Model.numero > 70)
     {
-        <h1 class="display-4">Você está com sorte!!</h1>
+        <h1 class="display-4">Você está com sorte!!!!!!!!!</h1>
     }
 </div>
