--- a/MOD 3/Aula7/SalaDeAula/Pages/Alunos/Create.cshtml
+++ b/MOD 3/Aula7/SalaDeAula/Pages/Alunos/Create.cshtml
@@ -6,11 +6,11 @@
 
 <form>
     <div class="mb-3">
-        <label for="nome" class="form-label">Nome do Aluno</label>
+        <label for="nome" class="form-label">Nome do Aluno:</label>
         <input type="text" class="form-control" id="nome" />
     </div>
     <div class="mb-3">
-        <label for="nascimento" class="form-label">Data Nascimento</label>
+        <label for="nascimento" class="form-label">Data Nascimento:</label>
         <input type="date" class="form-control" id="nascimento" />
     </div>
     <a class="btn btn-dark" asp-page="/Alunos/Sucesso">Criar</a>
