--- a/MOD 3/Aula7/SalaDeAula/Pages/Alunos/Sucesso.cshtml
+++ b/MOD 3/Aula7/SalaDeAula/Pages/Alunos/Sucesso.cshtml
@@ -2,5 +2,5 @@
 @model SalaDeAula.Pages.Alunos.SucessoModel
 @{
 }
-<h1>Aluno criado com sucesso</h1>
+<h1>Aluno criado com sucesso!</h1>
 <a class="btn btn-dark" asp-page="/Alunos/Index">Voltar</a>
