--- a/MOD 3/Aula8/Consultorio/Views/Shared/_Layout.cshtml
+++ b/MOD 3/Aula8/Consultorio/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Info">Info</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Paciente" asp-action="Index">Pacientes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
