--- a/MOD 3/Projeto/Farmacia/Views/Remedio/Index.cshtml
+++ b/MOD 3/Projeto/Farmacia/Views/Remedio/Index.cshtml
@@ -26,6 +26,7 @@
                 <th class="table-dark" scope="col">@Html.DisplayNameFor(Model => Model.First().Fabricante)</th>
                 <th class="table-dark" scope="col">@Html.DisplayNameFor(Model => Model.First().Quantidade)</th>
                 <th class="table-dark" scope="col">@Html.DisplayNameFor(Model => Model.First().Preco)</th>
+                <th class="table-dark" scope="col">Ações</th>
             </tr>
         </thead>
         <tbody>
@@ -37,6 +38,11 @@
                     <td>@Html.DisplayFor(Model => r.Fabricante)</td>
                     <td>@Html.DisplayFor(Model => r.Quantidade) Unidades</td>
                     <td>R$@Html.DisplayFor(Model => r.Preco)</td>
+                    <td>
+                        <a asp-controller="Remedio" asp-action="Read" asp-route-id="@r.Id">Visualizar</a> -
+                        <a asp-controller="Remedio" asp-action="Update" asp-route-id="@r.Id">Editar</a> -
+                        <a asp-controller="Remedio" asp-action="Delete" asp-route-id="@r.Id">Deletar</a>
+                    </td>
                 </tr>
 
             }
@@ -54,3 +60,4 @@
             <li class="list-group-item">Item com maior quantidade em estoque: @ViewBag.x </li>
         </ul>
     </div>
+
