--- a/MOD 3/Projeto/Farmacia/Views/Remedio/Delete.cshtml
+++ b/MOD 3/Projeto/Farmacia/Views/Remedio/Delete.cshtml
@@ -4,9 +4,12 @@
 <br />
 <br />
 
-<h1>Deletar remédio @Model.Nome de ID @Model.Id ?</h1>
-
-<form asp-action="Delete">
-    <input class="btn btn-outline-dark" type="submit" value="Confirmar" />
-    <a class="btn btn-outline-dark" asp-controller="Remedio" asp-action="Index">Voltar</a>
-</form>
+<center>
+    <h1>Deletar remédio @Model.Nome de ID @Model.Id ?</h1>
+    <br />
+    <br />
+    <form asp-action="Delete">
+        <input class="btn btn-outline-dark" type="submit" value="Confirmar" />
+        <a class="btn btn-outline-dark" asp-controller="Remedio" asp-action="Index">Cancelar</a>
+    </form>
+</center>
