--- a/MOD 3/Projeto/Farmacia/Views/Remedio/Read.cshtml
+++ b/MOD 3/Projeto/Farmacia/Views/Remedio/Read.cshtml
@@ -19,3 +19,5 @@
     <dd class="col-sm-9">@Html.DisplayFor(Model => Model.Quantidade) Unidades</dd>
 </dl>
 
+<a class="btn btn-outline-dark" asp-controller="Remedio" asp-action="Home">Voltar para Home</a>
+<a class="btn btn-outline-dark" asp-controller="Remedio" asp-action="Index">Visualizar toda lista</a>
