--- a/MOD 3/Projeto/Farmacia/Views/Shared/_Layout.cshtml
+++ b/MOD 3/Projeto/Farmacia/Views/Shared/_Layout.cshtml
@@ -13,15 +13,14 @@
 
 
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index">Farmácia BlueEdtech</a>                
+            <div class="container-fluid">                               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
+                        <li class="btn btn-outline-dark">
+                            <a class="btn btn-outline-light" asp-controller="Remedio" asp-action="Home">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Remedio" asp-action="Index">Remédios</a>
+                        <li class="btn btn-outline-dark">
+                            <a class="btn btn-outline-light" asp-controller="Remedio" asp-action="Index">Remédios</a>
                         </li>
                     </ul>
                 </div>
@@ -34,44 +33,6 @@
                 
             </div>
         </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!--<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Farmacia</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Remedio" asp-action="Index">Remédios</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>-->
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -81,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; Farmacia BlueEdtech - Módulo 3
+            &copy; Farmacia BlueEdtech - Módulo 3 - <a href="https://www.linkedin.com/in/thiago-le%C3%A3o-62988784/" target="_blank">Linkedin</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
