--- a/MOD 3/Projeto/Farmacia/Views/Remedio/Home.cshtml
+++ b/MOD 3/Projeto/Farmacia/Views/Remedio/Home.cshtml
@@ -7,8 +7,8 @@
 <div class="text-center">
     <h1>Bem vindo ao sistema da Farmácia Blue.</h1>
     <br />
-    <h4>Atualmente existem @Model.Count() itens cadastrados.</h4>
-    <br />
+    <div class="alert alert-dark" role="alert">Atualmente existem @Model.Count() itens cadastrados.</div>
+    
 </div>
 <div class="row">
     <div class="col-sm-6">
